<resources>
    <string name="app_name" translatable="false">Color Book</string>
    <string name="this_action_contains_ads">This action contains ads</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="languages">Select Language</string>
    <string name="apply">Apply</string>
    <string name="please_select_language_first">Please select language first</string>
    <string name="step_tracker">STEP \nTRACKER</string>
    <string name="skip">Skip</string>
    <string name="select_gender">Select Gender</string>
    <string name="helps_us_give_more_accurate_results">Helps us give more accurate results.</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="indonesian">Indonesian</string>
    <string name="network_error">Network Error</string>
    <string name="connect">Connect to network</string>
    <string name="this_application_requires_internet_connection_to_run_please_check_your_connection_and_try_again">This application requires internet connection to run. Please check your connection and try again.</string>
    <string name="don_t_miss_out">Don\'t miss out</string>
    <string name="for_more_features_and_a_better_user_experience_please_upgrade_this_app">For more features and a better user experience please upgrade this app</string>
    <string name="upgrade">Upgrade</string>
    <string name="congratulations">Congratulations!</string>
    <string name="download">Download</string>
    <string name="home">Home</string>
    <string name="my_artwork">#My artwork</string>
    <string name="painted_on">Painted on</string>
    <string name="my_collection">My Collection</string>
    <string name="settings">Settings</string>
    <string name="show_preview_window">Show preview window</string>
    <string name="vibrate_when_long_press">Vibrate when long press</string>
    <string name="btn_save">Save</string>
    <string name="remove">Remove</string>
    <string name="use">Use</string>
    <string name="select_music">Music</string>
    <string name="allow_the_app_to_access_your_files_and_audiovisual_content_to_select_music_from_your_device">Allow the app to access your files and audiovisual content to select music from your device.</string>
    <string name="loading_text">Loading...</string>
    <string name="continue_action">Continue</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="repaint_artwork">Repaint Artwork</string>
    <string name="delete_artwork">Delete Artwork</string>
    <string name="are_you_sure_to_repaint_this_artwork">Are you sure to repaint this artwork?</string>
    <string name="are_you_sure_to_delete_this_artwork">Are you sure to delete this artwork?</string>
    <string name="repaint">Repaint</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_with_friend">Share with Friend</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="relax_with_color_by_number">Relax with Color by Number</string>
    <string name="desc_intro_1">Fill each space with the right color and watch beautiful art come to life.</string>
    <string name="next">Next</string>
    <string name="intro_2_title">Coloring Made Simple</string>
    <string name="intro_2_desc">Just tap the numbers to color, easy, calming, and satisfying.</string>
    <string name="intro_3_title">Explore Endless Categories.</string>
    <string name="intro_3_desc">From cute to artistic, simple to detailed.</string>
    <string name="start_coloring_and_build_your_personal_gallery">Start coloring and build your personal gallery.</string>
</resources>