<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_loading"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/congratulations"
        android:textColor="#002948"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icShare"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:src="@drawable/ic_share"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="264dp"
        android:layout_height="264dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:src="@drawable/line_paint_1" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/my_artwork"
        android:textColor="#1DB9A6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/painted_on"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="#002948"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:gravity="center"
            android:background="@drawable/bg_radius_8"
            android:backgroundTint="@color/white"
            android:layout_weight="1">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_download"/>

            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/download"
                android:textColor="#002948" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:gravity="center"
            android:background="@drawable/bg_radius_8"
            android:backgroundTint="#0071C7"
            android:layout_weight="1">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_home"/>

            <TextView
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_bold"
                android:padding="10dp"
                android:text="@string/home"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>