<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginHorizontal="@dimen/dp16"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/onPrimaryContainer"
            android:text="@string/skip"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/top_bar"
        app:layout_constraintStart_toStartOf="@+id/top_bar"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <TextView
            android:id="@+id/tv_select_gender"
            style="@style/mHeading.P3.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/select_gender"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_select_gender_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/helps_us_give_more_accurate_results"
            android:textColor="#A0A3AA"
            app:layout_constraintStart_toStartOf="@+id/tv_select_gender"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_gender" />

        <LinearLayout
            android:id="@+id/option_genders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/tv_select_gender_2"
            android:orientation="horizontal">
            <com.dktech.baseandroidviewdktech.core.custom_view.AnimatedTickImage
                android:id="@+id/male"
                android:layout_width="148dp"
                android:src="@drawable/male"
                android:layout_height="148dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <com.dktech.baseandroidviewdktech.core.custom_view.AnimatedTickImage
                android:id="@+id/female"
                android:layout_width="148dp"
                android:src="@drawable/female"
                android:layout_height="148dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>